# secrets-manager-macro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: github-deploy.yml
e2e/code/: Cargo.toml
e2e/code/src/: main.rs
e2e/infra/: package-lock.json  package.json
e2e/infra/lib/: infra-stack.ts
e2e/infra/lib/modules/: functions.ts
e2e/scripts/: expected  verify_output.sh
scripts/: constants.sh  secret_manager_delete_tests_setup.sh  secret_manager_tests_setup.sh  secrets_manager_delete_tests_setup.sh
secret-manager-code/: Cargo.toml
secret-manager-code/src/: lib.rs
secret-manager-macro/: Cargo.toml  README.md
secret-manager-macro/src/: code.rs  lib.rs
secret-manager-macro/src/implementation/: aws.rs  entrypoint.rs  errors.rs  input.rs  mod.rs  output.rs  secret_string.rs  sm_client.rs  transformations.rs
secret-manager-usage/: Cargo.toml
secret-manager-usage/src/: main.rs
secret-manager-usage/tests/: integration_test_env_prod.rs  integration_tests.rs
secret-manager-usage/tests/fails/: build_enum.rs  invalid_json.rs  invalid_json.stderr  unknown_env.rs  unknown_env.stderr  unknown_secret.rs  unknown_secret.stderr
secrets-manager-macro/: Cargo.toml  README.md
secrets-manager-macro/src/: lib.rs
secrets-manager-macro/src/implementation/: aws.rs  entrypoint.rs  input.rs  output.rs  transformations.rs
secrets-manager-usage/: Cargo.toml
secrets-manager-usage/tests/: compilation_tests.rs  integration_test_env_prod.rs  integration_tests.rs
secrets-manager-usage/tests/fails/: build_enum.rs  build_enum.stderr  invalid_json.rs  unknown_env.rs  unknown_env.stderr  unknown_secret.rs  unknown_secret.stderr
