[package]
name = "secret-manager-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["extra-traits"]}
proc-macro2 = "1.0.49"
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
serde_json = "1.0.93"
# TODO do I need full? do I need derive?
tokio = { version = "1.26.0", features = ["full"] }
serde = { version ="1.0.158", features = ["derive"]}

[lib]
proc-macro = true

