[package]
name = "secrets-manager-macro"
version = "0.1.0"
edition = "2021"

description = "Macro for using AWS Secrets Manager secrets in your application"
license = "MIT"
homepage = "https://github.com/VanOvermeire/secrets-manager-macro"
repository = "https://github.com/VanOvermeire/secrets-manager-macro"
readme = "README.md"
keywords = ["AWS", "secrets-manager", "macro"]

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"]}
proc-macro2 = "1.0.49"
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.10"
serde = { version ="1.0.158"}

[lib]
proc-macro = true
