[package]
name = "secrets-manager-usage"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
secrets-manager-macro = { path = "../secrets-manager-macro" }
assert-impl = "0.1.3"
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
trybuild = "1.0.73"
