[package]
name = "e2e-test-code"
version = "0.1.0"
edition = "2021"

[dependencies]
secret-manager-macro = { path = "../../secrets-manager-macro" }
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
trybuild = "1.0.73"
lambda_runtime = "0.6.0"
